@@ -75,6 +75,7 @@ documents those changes that are of interest to users and administrators.
     --enable-really-no-cray.
  -- slurm.spec - add new --with slurmsmwd option.
  -- pmi2: add mutex locking to all API calls to ensure thread-safety.
+ -- Usagefactor now multiplies TRES timelimit and usage_min.
 
 * Changes in Slurm 19.05.0pre3
 ==============================
